# osu-replay

./: .gitignore  .gitmodules  CMakeLists.txt
res/magma/: wc_replay.osr
res/shaders/: ui.frag.glsl  ui.vert.glsl
src/: beatmap.cpp  beatmap.hpp  gameplay.hpp  gl_utils.cpp  gl_utils.hpp  glctx.cpp  glctx.hpp  io.cpp  io.hpp  main.cpp  replay.cpp  replay.hpp  result.hpp  stdfloat.hpp  strings.hpp  timer.cpp  timer.hpp  ui_renderer.cpp  ui_renderer.hpp
